# silero-vad

./: .gitignore  CITATION.cff  LICENSE  README.md  hubconf.py  pyproject.toml  silero-vad.ipynb  utils.py  utils_vad.py  utils_vad_additional.py
.github/: CODEOWNERS
.github/workflows/: publish.yml  python-publish.yml  test.yml  test_linux.yml
cpp/: silero_vad_onnx_1.cpp
datasets/: README.md
examples/: colab_record_example.ipynb  parallel_example.ipynb  parallel_process.py  pyaudio-streaming-examples.ipynb
examples/c++/: README.md  main.cc  silero.cc  silero.h  wav.h
examples/cpp/: README.md  silero-vad-onnx.cpp  wav.h
examples/cpp_libtorch/: README.md  ReadMe  main.cc  silero  silero_torch.cc  silero_torch.h
examples/csharp/: Program.cs  SileroSpeechSegment.cs  SileroVadDetector.cs  SileroVadOnnxModel.cs  VadDotNet.csproj  VadDotNet.sln
examples/go/: README.md  go.mod  go.sum
examples/haskell/: README.md  example.cabal  package.yaml  stack.yaml
examples/java-example/: pom.xml
examples/microphone_and_webRTC_integration/: README.md  microphone_and_webRTC_integration.py
examples/openvino/: README.md  convert.py  verify.py
examples/pyaudio-streaming/: README.md  pyaudio-streaming-examples.ipynb  requirements.txt
examples/rust-example/: .gitignore  Cargo.toml  README.md
files/: Silero_VAD.jit  joint_VAD_just_RU_jit_cut_q.pth.tar  lang_dict_116.json  lang_dict_95.json  lang_group_dict_116.json  lang_group_dict_95.json  model.jit  model_micro.jit  model_micro.onnx  model_micro_8k.jit  model_micro_8k.onnx  model_micro_mobile.jit  model_mini.jit  model_mini.onnx  model_mini_8k.jit  model_mini_8k.onnx  number_detector.jit  silero_vad.jit  silero_vad.onnx
runtime/cpp/: README.md
silero-vad/: README.md  hubconf.py  models.yml
tests/: test_basic.py
tests/data/: test.opus
tuning/: README.md  config.yml  example_dataframe.feather  search_thresholds.py  tune.py  utils.py
(+26 files in other folders)
